# ado-cli

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  dist-workspace.toml  publish.bat
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  publish-npm.workflow-run.yml  release.yml
assets/: SKILL.md  env.example
npm/ado-cli/: README.md  package.json
src/: cli.rs  config.rs  main.rs  ops.rs  skill.rs
src/azure/: mod.rs  models.rs
