[package]
name = "ado-cli"
version = "0.1.2"
edition = "2021"
description = "CLI para manipular work items de um board do Azure DevOps (saída JSON)"
license = "MIT"
readme = "README.md"
repository = "https://github.com/dfalci/ado-cli"
homepage = "https://github.com/dfalci/ado-cli"
authors = ["Daniel Falci <danielfalci@gmail.com>"]
keywords = ["azure-devops", "azure-boards", "work-items", "cli"]

[[bin]]
name = "ado-cli"
path = "src/main.rs"

# Perfil usado pelo cargo-dist nos builds de release.
[profile.dist]
inherits = "release"
lto = "thin"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
